@@ -27,6 +27,7 @@
 
 #include <gnome.h>
 #include "gui/dialog.h"
+#include "gui/widgets.h"
 
 #include "main/settings.h"
 
@@ -86,14 +87,17 @@ static void get_entry_text(GS_DIALOG * info)
 	
 }
 
+
+
 /******************************************************************************
  * Name
- *   dialog_destroy
+ *   on_dialog1_response
  *
  * Synopsis
  *   #include "gui/dialog.h"
  *
- *   void dialog_destroy(GtkObject * object, gpointer user_data)
+ *   void on_dialog1_response(GtkDialog * dialog, gint response_id,
+ *							GS_DIALOG * info)
  *
  * Description
  *   
@@ -102,108 +106,29 @@ static void get_entry_text(GS_DIALOG * info)
  *   void
  */
 
-static void dialog_destroy(GtkObject * object, gpointer user_data)
+static void on_dialog1_response(GtkDialog * dialog, gint response_id,
+							GS_DIALOG * info)
 {
-	gtk_main_quit();
+	g_warning("%d",response_id);
+	switch(response_id) {
+		case GTK_RESPONSE_OK:
+			retval = GS_OK;
+			get_entry_text(info);
+		break;
+		case GTK_RESPONSE_YES:
+			retval = GS_YES;
+			get_entry_text(info);
+		break;
+		case GTK_RESPONSE_NO:
+			retval = GS_NO;
+		break;
+		case GTK_RESPONSE_CANCEL:
+			retval = GS_CANCEL;
+		break;
+		
+	}
 }
 
-
-/******************************************************************************
- * Name
- *   on_button_ok_clicked
- *
- * Synopsis
- *   #include "gui/dialog.h"
- *
- *   void on_button_ok_clicked(GtkButton * button, GS_DIALOG * info)
- *
- * Description
- *   
- *
- * Return value
- *   void
- */
-
-static void on_button_ok_clicked(GtkButton * button, GS_DIALOG * info)
-{
-	retval = GS_OK;
-	get_entry_text(info);
-	gtk_widget_destroy(gs_dialog);
-}
-
-
-/******************************************************************************
- * Name
- *   on_button_cancel_clicked
- *
- * Synopsis
- *   #include "gui/dialog.h"
- *
- *   void on_button_cancel_clicked(GtkButton * button,
-				     GS_DIALOG * info)
- *
- * Description
- *   
- *
- * Return value
- *   void
- */
-
-static void on_button_cancel_clicked(GtkButton * button,
-				     GS_DIALOG * info)
-{
-	retval = GS_CANCEL;
-	gtk_widget_destroy(gs_dialog);
-}
-
-
-/******************************************************************************
- * Name
- *   on_button_yes_clicked
- *
- * Synopsis
- *   #include "gui/dialog.h"
- *
- *   void on_button_yes_clicked(GtkButton * button,
- *				  GS_DIALOG * info)
- *
- * Description
- *   
- *
- * Return value
- *   void
- */
-
-static void on_button_yes_clicked(GtkButton * button,
-				  GS_DIALOG * info)
-{
-	retval = GS_YES;
-	get_entry_text(info);
-	gtk_widget_destroy(gs_dialog);
-}
-
-
-/******************************************************************************
- * Name
- *   on_button_no_clicked
- *
- * Synopsis
- *   #include "gui/dialog.h"
- *
- *   void on_button_no_clicked(GtkButton * button, GS_DIALOG * info)
- *
- * Description
- *   
- *
- * Return value
- *   void
- */
-
-static void on_button_no_clicked(GtkButton * button, GS_DIALOG * info)
-{
-	retval = GS_NO;
-	gtk_widget_destroy(gs_dialog);
-}
 
 
 /******************************************************************************
@@ -225,7 +150,7 @@ static void on_button_no_clicked(GtkButton * button, GS_DIALOG * info)
 static GtkWidget *gs_dialog_build(GS_DIALOG * info)
 {
 
-	GtkWidget *dialog_vbox21;
+	GtkWidget *dialog_vbox;
 	GtkWidget *vbox83;
 	GtkWidget *hbox83;
 	GtkWidget *pixmap;
@@ -246,44 +171,71 @@ static GtkWidget *gs_dialog_build(GS_DIALOG * info)
 	GtkWidget *button_cancel;
 	GtkWidget *button_yes;
 	GtkWidget *button_no;
+	GString *str;
 
-	gs_dialog = gtk_dialog_new();
+
+	gs_dialog = gtk_dialog_new();	
 	gtk_object_set_data(GTK_OBJECT(gs_dialog), "gs_dialog",
 			    gs_dialog);
-	gtk_window_set_title(GTK_WINDOW(gs_dialog), info->title); //settings.program_title);
+	gtk_window_set_title(GTK_WINDOW(gs_dialog), info->title ? info->title : "");
 	gtk_window_set_policy(GTK_WINDOW(gs_dialog), TRUE, TRUE, FALSE);
-
+	gtk_container_set_border_width (GTK_CONTAINER (gs_dialog), 8);
+	
+	if (info->no)
+		gtk_dialog_add_button(GTK_DIALOG(gs_dialog),GTK_STOCK_NO,
+                                             GTK_RESPONSE_NO);
+	if (info->yes)
+		gtk_dialog_add_button(GTK_DIALOG(gs_dialog),GTK_STOCK_YES,
+                                             GTK_RESPONSE_YES);
+	
+	if (info->cancel)
+		gtk_dialog_add_button(GTK_DIALOG(gs_dialog),GTK_STOCK_CANCEL,
+                                             GTK_RESPONSE_CANCEL);
+	if (info->ok)
+		gtk_dialog_add_button(GTK_DIALOG(gs_dialog),GTK_STOCK_OK,
+                                             GTK_RESPONSE_OK);
+	
+	
 	info->dialog = gs_dialog;
 	
-	dialog_vbox21 = GTK_DIALOG(gs_dialog)->vbox;
-	gtk_object_set_data(GTK_OBJECT(gs_dialog), "dialog_vbox21",
-			    dialog_vbox21);
-	gtk_widget_show(dialog_vbox21);
+	dialog_vbox = GTK_DIALOG(gs_dialog)->vbox;
+	gtk_object_set_data(GTK_OBJECT(gs_dialog), "dialog_vbox",
+			    dialog_vbox);
+	gtk_widget_show(dialog_vbox);
 
-	vbox83 = gtk_vbox_new(FALSE, 0);
+/*	vbox83 = gtk_vbox_new(FALSE, 0);
 	gtk_widget_show(vbox83);
-	gtk_box_pack_start(GTK_BOX(dialog_vbox21), vbox83, TRUE, TRUE,
+	gtk_box_pack_start(GTK_BOX(dialog_vbox), vbox83, TRUE, TRUE,
 			   0);
-
+*/
 
 	hbox83 = gtk_hbox_new(FALSE, 0);
 	gtk_widget_show(hbox83);
-	gtk_box_pack_start(GTK_BOX(vbox83), hbox83, TRUE, TRUE, 0);
+	gtk_box_pack_start(GTK_BOX(dialog_vbox), hbox83, TRUE, TRUE, 0);
+	if(info->stock_icon) {
+		pixmap = gtk_image_new_from_stock(info->stock_icon,
+						      GTK_ICON_SIZE_DIALOG);
+		/*pixmap = gnome_pixmap_new_from_file(PACKAGE_PIXMAPS_DIR
+						    "/gs2-48x48.png");*/
+		gtk_widget_show(pixmap);
+		gtk_box_pack_start(GTK_BOX(hbox83), pixmap, FALSE, FALSE, 0);
+	}
 
-	pixmap = gnome_pixmap_new_from_file(PACKAGE_PIXMAPS_DIR
-					    "/gs2-48x48.png");
-	gtk_widget_show(pixmap);
-	gtk_box_pack_start(GTK_BOX(hbox83), pixmap, TRUE, TRUE, 0);
-
-	vbox84 = gtk_vbox_new(FALSE, 0);
+	vbox84 = gtk_vbox_new(FALSE, 8);
 	gtk_widget_show(vbox84);
 	gtk_box_pack_start(GTK_BOX(hbox83), vbox84, TRUE, TRUE, 0);
+	//gtk_container_set_border_width (GTK_CONTAINER (vbox84), 16);
 
 	if (info->label_top) {
+		str = g_string_new("");
+		g_string_printf(str,"<span weight=\"bold\">%s</span>",info->label_top);
 		label_top = gtk_label_new(info->label_top);
+		gtk_label_set_markup((GtkLabel*)label_top,
+                                           str->str);  
 		gtk_widget_show(label_top);
 		gtk_box_pack_start(GTK_BOX(vbox84), label_top, TRUE,
 				   TRUE, 0);
+		g_string_free(str,TRUE);
 	}
 
 	if (info->label_middle) {
@@ -295,7 +247,9 @@ static GtkWidget *gs_dialog_build(GS_DIALOG * info)
 
 	table14 = gtk_table_new(6, 2, FALSE);;
 	gtk_widget_show(table14);
-	gtk_box_pack_start(GTK_BOX(vbox84), table14, TRUE, TRUE, 0);
+	gtk_box_pack_start(GTK_BOX(dialog_vbox), table14, TRUE, TRUE, 0);
+	gtk_container_set_border_width (GTK_CONTAINER (table14), 16);
+		//gtk_widget_set_size_request (table14, 350, -2);
 
 	if (info->label1) {
 		label1 = gtk_label_new(info->label1);
@@ -311,6 +265,7 @@ static GtkWidget *gs_dialog_build(GS_DIALOG * info)
 				 (GtkAttachOptions) (GTK_EXPAND |
 						     GTK_FILL),
 				 (GtkAttachOptions) (0), 0, 0);
+		gtk_widget_set_size_request (entry1, 250, -1);
 		if(info->text1)
 			gtk_entry_set_text(GTK_ENTRY(entry1),info->text1);
 	}
@@ -404,82 +359,9 @@ static GtkWidget *gs_dialog_build(GS_DIALOG * info)
 				   TRUE, 0);
 	}
 
-
-
-	dialog_action_area21 = GTK_DIALOG(gs_dialog)->action_area;
-	gtk_object_set_data(GTK_OBJECT(gs_dialog),
-			    "dialog_action_area21",
-			    dialog_action_area21);
-	gtk_widget_show(dialog_action_area21);
-	gtk_container_set_border_width(GTK_CONTAINER
-				       (dialog_action_area21), 10);
-
-	hbuttonbox1 = gtk_hbutton_box_new();
-	gtk_widget_show(hbuttonbox1);
-	gtk_box_pack_start(GTK_BOX(dialog_action_area21), hbuttonbox1,
-			   TRUE, TRUE, 0);
-
-	if (info->ok) {
-		button_ok = gtk_button_new_from_stock ("gtk-ok");
-		gtk_widget_show(button_ok);
-		gtk_container_add(GTK_CONTAINER(hbuttonbox1),
-				  button_ok);
-		GTK_WIDGET_SET_FLAGS(button_ok, GTK_CAN_DEFAULT);
-
-		gtk_signal_connect(GTK_OBJECT(button_ok), "clicked",
-				   G_CALLBACK
-				   (on_button_ok_clicked),
-				   info);
-	}
-
-	if (info->cancel) {
-		button_cancel =
-		    gtk_button_new_from_stock ("gtk-cancel");
-		gtk_widget_show(button_cancel);
-		gtk_container_add(GTK_CONTAINER(hbuttonbox1),
-				  button_cancel);
-		GTK_WIDGET_SET_FLAGS(button_cancel, GTK_CAN_DEFAULT);
-
-		gtk_signal_connect(GTK_OBJECT(button_cancel), "clicked",
-				   G_CALLBACK
-				   (on_button_cancel_clicked), 
-				info);
-
-	}
-
-	if (info->yes) {
-		button_yes = gtk_button_new_from_stock ("gtk-yes");
-		gtk_widget_show(button_yes);
-		gtk_container_add(GTK_CONTAINER(hbuttonbox1),
-				  button_yes);
-		GTK_WIDGET_SET_FLAGS(button_yes, GTK_CAN_DEFAULT);
-
-		gtk_signal_connect(GTK_OBJECT(button_yes), "clicked",
-				   G_CALLBACK
-				   (on_button_yes_clicked), 
-				info);
-
-	}
-
-	if (info->no) {
-		button_no = gtk_button_new_from_stock ("gtk-no"); 
-		gtk_widget_show(button_no);
-		gtk_container_add(GTK_CONTAINER(hbuttonbox1),
-				  button_no);
-		GTK_WIDGET_SET_FLAGS(button_no, GTK_CAN_DEFAULT);
-
-		gtk_signal_connect(GTK_OBJECT(button_no), "clicked",
-				   G_CALLBACK
-				   (on_button_no_clicked), 
-				info);
-
-	}
-
-        gtk_signal_connect (GTK_OBJECT (gs_dialog), "delete_event",
-			G_CALLBACK (gtk_main_quit),
-			NULL);
-	gtk_signal_connect(GTK_OBJECT(gs_dialog), "destroy",
-			   G_CALLBACK(dialog_destroy), NULL);
+	g_signal_connect ((gpointer) gs_dialog, "response",
+                    G_CALLBACK (on_dialog1_response),
+                    info);
 
 	gtk_widget_show_all(gs_dialog);
 	return gs_dialog;
@@ -508,6 +390,7 @@ GS_DIALOG *gui_new_dialog(void)
 	
 	info = g_new0(GS_DIALOG, 1);
 	
+	info->stock_icon = NULL;
 	info->dialog = NULL;
 	info->title = NULL;
 	info->text1 = NULL;
@@ -559,18 +442,17 @@ GS_DIALOG *gui_new_dialog(void)
 
 gint gui_gs_dialog(GS_DIALOG * info)
 {
-	GtkWidget *window;
+	GtkWidget *dialog;
 	static gboolean is_running = FALSE;
 	
 	if(!is_running) {
-		window = gs_dialog_build(info);
+		dialog = gs_dialog_build(info);
 		retval = 4;
 		is_running = TRUE;
-		gtk_main ();
-//		g_warning("dialog closed");
+		gtk_dialog_run((GtkDialog *)dialog);
 		is_running = FALSE;
+		gtk_widget_destroy(gs_dialog);
 		return retval;
 	}
 	return 4;
-   // gtk_window_remove_accel_group (GTK_WINDOW (window), accel_table);
 }
